# docovert

./: .gitignore  .prettierignore  Dockerfile  Makefile  README.md  main.py  package-lock.json  pyproject.toml
flaskr/: __init__.py  convert.py
flaskr/static/js/: index.js
flaskr/templates/: index.html
templates/: index.html
tests/: conftest.py  test_docx.py  test_html_conversion.py  test_index.py  test_md.py
tests/resources/: test.docx  test.html  test.md
