[project]
name = "docovert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "pathvalidate>=3.3.1",
    "pypandoc>=1.16.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "uv-upsync>=2.1.0",
]
